# job-scraper-demo

./: .env.example  .gitignore  README.md  demo.py  education_extractor.py  employer_dedup.py  pyproject.toml  requirements.txt  scraper.py  theirstack_client.py
app/: config.py  dependencies.py  main.py
app/db/: session.py
app/models/: __init__.py  assignment.py  employer.py  job_posting.py  submission.py  user.py
app/routers/: admin.py  auth.py  jobs.py
app/schemas/: admin.py  auth.py  job.py  submission.py
app/services/: admin_service.py  auth_service.py  ingestion_service.py  job_service.py
frontend/: index.html  package-lock.json  package.json  railway.toml
frontend/src/: App.tsx  api.ts  auth.tsx  types.ts
frontend/src/components/: Badge.tsx  Layout.tsx
frontend/src/pages/: AdminDashboard.tsx  AdminIngest.tsx  AdminUsers.tsx  JobDetail.tsx  Jobs.tsx  Login.tsx
frontend/src/styles/: globals.css
